@@ -27,15 +27,13 @@ kotlin {
         }
 
         val desktopTest by getting {
-            val desktopTest by getting {
                 dependencies {
                     implementation(libs.junit.junit)
                     implementation(libs.junit.jupiter)
-
                     implementation(libs.mockk.jvm)
-
+                    implementation(libs.slf4j.simple)
+                    implementation(libs.junit.jupiter.engine)
                 }
-            }
         }
 
         commonMain.dependencies {
@@ -56,22 +54,37 @@ kotlin {
             implementation(libs.voyager.screenModel)
             implementation(libs.voyager.transitions)
             implementation(libs.voyager.bottomSheetNavigator)
+
+
             implementation(libs.compose.material)
             implementation(compose.components.resources)
             implementation(libs.jakarta.mail)
         }
+
         desktopMain.dependencies {
             implementation(compose.desktop.currentOs)
             implementation(libs.kotlinx.coroutines.swing)
+
             implementation(libs.mysql.connector.java)
             implementation(libs.exposed.core)
             implementation(libs.exposed.dao)
             implementation(libs.exposed.jdbc)
             implementation(libs.jakarta.mail)
+            implementation("com.itextpdf:itextpdf:5.5.13.3")
+            implementation ("com.google.zxing:core:3.4.1")
+            implementation ("com.google.zxing:javase:3.4.1")
+            implementation(compose.desktop.currentOs)
+            implementation(libs.junit.junit)
+            implementation(libs.junit.jupiter)
+            implementation(kotlin("test"))
+            implementation("org.junit.jupiter:junit-jupiter-api:5.10.2")
+            implementation("org.junit.jupiter:junit-jupiter-engine:5.10.2")
+            implementation("io.mockk:mockk:1.13.10") // versión estable para JVM
+            implementation("org.slf4j:slf4j-simple:2.0.9")
+
         }
     }
 }
-
 
 compose.desktop {
     application {
@@ -85,7 +98,9 @@ compose.desktop {
 }
 
 tasks.withType<Test> {
-    useJUnitPlatform() // Usar JUnit 5
+
+    useJUnitPlatform() // Esto es necesario para usar JUnit 5
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
     testLogging {
         events("passed", "skipped", "failed")
     }
